# gradient-free-subgrid-neural-emulator

./: README.md  l96_train.py  pyproject.toml  qg_eval.py  qg_spinup.py  qg_train.py  utils.py
docs/: l96_data.ipynb  l96_eval.ipynb  qg_data.ipynb  qg_metrics.ipynb
models/: cnn.py  l96.py  mlp.py  physics_sgs.py  qg_periodic.py  time_solver.py
